# guardep

./: .gitignore  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  audit.toml  codecov.yml  guardep.example.toml
.claude/: README.md  settings.json
.claude/commands/: audit-self.md  pre-push.md  release.md
.claude/hooks/: format-rust.sh  quality-gate.sh
.claude/skills/guardep-patterns/: SKILL.md
.github/: dependabot.yml
.github/actions/guardep-diff/: README.md  action.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml  scorecard.yml
crates/guardep-cli/: Cargo.toml
crates/guardep-cli/src/: main.rs  report.rs  sarif.rs  sbom.rs
crates/guardep-cli/src/commands/: audit.rs  cache.rs  diff.rs  fix.rs  info.rs  install_shims.rs  mod.rs  shims.rs  skip.rs
crates/guardep-cli/src/shim/: cargo.rs  mod.rs  mvn.rs  npm.rs
crates/guardep-core/: Cargo.toml
crates/guardep-core/src/: advisory.rs  cache.rs  ecosystem.rs  evaluator.rs  exploit.rs  finding.rs  finding_adapter.rs  intel.rs  lib.rs  license.rs  matcher.rs  maven_version.rs  osv.rs  osv_evaluator.rs  policy.rs  postinstall.rs  postinstall_ast.rs  provenance.rs  range.rs  report_data.rs  resolver.rs  source_scan.rs  source_scan_evaluator.rs  threat_feed.rs
crates/guardep-core/tests/: cargo_dry_run_integration.rs  cargo_resolver_integration.rs  intel_validation.rs  maven_resolver_integration.rs  postinstall_ast_integration.rs
packaging/: README.md
packaging/homebrew/: guardep.rb
