[package]
name = "guardep-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "guardep"
path = "src/main.rs"

[dependencies]
guardep-core = { path = "../guardep-core" }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true
directories.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
