[package]
name = "guardep-cli"
description = "Package-manager firewall: deterministic dependency gate for npm/pnpm/yarn that blocks risky installs before postinstall scripts run."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "guardep"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
guardep-core = { path = "../guardep-core" }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true
directories.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
indicatif.workspace = true
supports-color.workspace = true
similar.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Used by cache prune tests to backdate `fetched_at` deterministically.
# Already a workspace dep through `guardep-core`; reusing avoids the
# only alternative (a sleep-based fixture or a test-only public API on
# `KvCache`).
rusqlite.workspace = true
