[package]
name = "guardep-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
semver.workspace = true
tracing.workspace = true
chrono.workspace = true
directories.workspace = true
