[package]
name = "guardep-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
semver.workspace = true
tracing.workspace = true
chrono.workspace = true
directories.workspace = true
async-trait.workspace = true
sha2.workspace = true
hex.workspace = true
futures.workspace = true
regex.workspace = true
base64.workspace = true
sigstore.workspace = true
tempfile.workspace = true

[dev-dependencies]
wiremock.workspace = true
