[package]
name = "guardep-core"
description = "Core library for guardep: finding model, evaluator trait, OSV/EPSS/KEV/OSSF/intel/source-scan/license/provenance evaluators, lockfile resolvers."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
semver.workspace = true
tracing.workspace = true
chrono.workspace = true
directories.workspace = true
async-trait.workspace = true
sha2.workspace = true
hex.workspace = true
futures.workspace = true
regex.workspace = true
base64.workspace = true
sigstore.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_ast.workspace = true
swc_common.workspace = true
swc_ecma_visit.workspace = true
tempfile.workspace = true
indicatif.workspace = true

[dev-dependencies]
wiremock.workspace = true
